[package]
name = "rusty-url"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.28"
rocket = "=0.5.0-rc.3"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
futures = "0.3"
rand = "0.8.5"

[dependencies.mongodb]
version = "2.6.1"
default-features=false
features = ["sync"]